// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> Snapshots when default should render correctly 1`] = `
.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.1875rem;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  font-family: inherit;
  outline: none;
  cursor: pointer;
  color: #fff;
  border-radius: 0.1875rem;
  padding: 0.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2875c6;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  font-size: 0.875rem;
  line-height: 1.125rem;
}

.emotion-0::after {
  content: ' ';
  position: absolute;
  border-radius: 0.1875rem;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  box-sizing: border-box;
  z-index: -1;
  box-shadow: 0.1875rem;
}

.emotion-0:hover {
  background-color: #5187e0;
}

.emotion-0:focus::after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 0 0 0.0625rem #fff,0 0 0 0.1875rem #2875c6,inset 0 0 0.375rem rgba(12,13,13,0.18);
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  background-color: #1d5794;
}

<div
  className="emotion-2 emotion-3"
>
  <button
    className="emotion-0 emotion-1"
    onClick={[Function]}
    size="normal"
    type="button"
  >
    Tag
  </button>
</div>
`;

exports[`<Tag /> Snapshots when dismissible should render correctly 1`] = `
.emotion-7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.1875rem;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  font-family: inherit;
  outline: none;
  cursor: pointer;
  color: #fff;
  border-radius: 0.1875rem;
  padding: 0.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2875c6;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  font-size: 0.875rem;
  line-height: 1.125rem;
}

.emotion-0::after {
  content: ' ';
  position: absolute;
  border-radius: 0.1875rem;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  box-sizing: border-box;
  z-index: -1;
  box-shadow: 0.1875rem;
}

.emotion-0:hover {
  background-color: #5187e0;
}

.emotion-0:focus::after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 0 0 0.0625rem #fff,0 0 0 0.1875rem #2875c6,inset 0 0 0.375rem rgba(12,13,13,0.18);
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  background-color: #1d5794;
}

.emotion-5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  font-family: inherit;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-right-radius: 0.1875rem;
  border-bottom-right-radius: 0.1875rem;
  background-color: #2875c6;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5:hover {
  background-color: #5187e0;
}

.emotion-5:hover .cr-icon__base {
  fill: rgba(12,13,13,0.65);
}

.emotion-5:focus .cr-icon {
  box-shadow: 0 0 0 0.0625rem transparent,0 0 0 0.125rem #fff;
}

.emotion-5:focus .cr-icon__base {
  fill: rgba(12,13,13,0.4);
}

.emotion-5::-moz-focus-inner {
  border: 0;
}

.emotion-5:active {
  background-color: #1d5794;
}

.emotion-5:active .cr-icon__base {
  fill: rgba(12,13,13,0.2);
}

.emotion-3 {
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
  margin: 0 0.375rem;
  border-radius: 50%;
  z-index: 1;
}

<div
  className="emotion-7 emotion-8"
>
  <button
    className="emotion-0 emotion-1"
    onClick={[Function]}
    size="normal"
    type="button"
  >
    Tag
  </button>
  <button
    className="emotion-5 emotion-6"
    data-testid="tag-remove-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2 cr-icon emotion-3 emotion-4"
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="cr-icon__base cr-icon__base-1"
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm1.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="rgba(12,13,13,0.4)"
      />
      <path
        className="cr-icon__details cr-icon__details-1"
        d="M9.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="#fff"
      />
    </svg>
  </button>
</div>
`;

exports[`<Tag /> Snapshots when small should render correctly 1`] = `
.emotion-7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.1875rem;
}

.emotion-5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  font-family: inherit;
  outline: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-right-radius: 0.1875rem;
  border-bottom-right-radius: 0.1875rem;
  background-color: #2875c6;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5:hover {
  background-color: #5187e0;
}

.emotion-5:hover .cr-icon__base {
  fill: rgba(12,13,13,0.65);
}

.emotion-5:focus .cr-icon {
  box-shadow: 0 0 0 0.0625rem transparent,0 0 0 0.125rem #fff;
}

.emotion-5:focus .cr-icon__base {
  fill: rgba(12,13,13,0.4);
}

.emotion-5::-moz-focus-inner {
  border: 0;
}

.emotion-5:active {
  background-color: #1d5794;
}

.emotion-5:active .cr-icon__base {
  fill: rgba(12,13,13,0.2);
}

.emotion-3 {
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
  margin: 0 0.375rem;
  border-radius: 50%;
  z-index: 1;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  font-family: inherit;
  outline: none;
  cursor: pointer;
  color: #fff;
  border-radius: 0.1875rem;
  padding: 0.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2875c6;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  font-size: 0.75rem;
  line-height: 0.75rem;
}

.emotion-0::after {
  content: ' ';
  position: absolute;
  border-radius: 0.1875rem;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  box-sizing: border-box;
  z-index: -1;
  box-shadow: 0.1875rem;
}

.emotion-0:hover {
  background-color: #5187e0;
}

.emotion-0:focus::after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 0 0 0.0625rem #fff,0 0 0 0.1875rem #2875c6,inset 0 0 0.375rem rgba(12,13,13,0.18);
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  background-color: #1d5794;
}

<div
  className="emotion-7 emotion-8"
>
  <button
    className="emotion-0 emotion-1"
    onClick={[Function]}
    size="small"
    type="button"
  >
    Tag
  </button>
  <button
    className="emotion-5 emotion-6"
    data-testid="tag-remove-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="emotion-2 cr-icon emotion-3 emotion-4"
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="cr-icon__base cr-icon__base-1"
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm1.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="rgba(12,13,13,0.4)"
      />
      <path
        className="cr-icon__details cr-icon__details-1"
        d="M9.478 8l2.216-2.216a1.045 1.045 0 1 0-1.478-1.478L8 6.522 5.784 4.306a1.045 1.045 0 0 0-1.478 1.478L6.522 8l-2.216 2.216a1.045 1.045 0 1 0 1.478 1.478L8 9.478l2.216 2.216a1.045 1.045 0 1 0 1.478-1.478L9.478 8z"
        fill="#fff"
      />
    </svg>
  </button>
</div>
`;
